Mon Apr 21 11:05:10 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c: minor gstreamer issues when compiling without
	threads or without gtk.
	* set.c: CommandSetGUIShowWastage needs to be defined when compiling
	without gtk

Sun Apr 20 23:25:42 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkboard.c, gtkboard.h, gtkoptions.c, set.c:
	make showing of epc wastage optional and fix minor sizing problems.

Sun Apr 20 20:36:28 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* play.c: fix cube tutoring after changes to make the progress
	indicator async.

Wed Apr 16 22:05:24 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* eval.c: in FindBestCubeDecision. Fix rare case where no double,
	beaver was returned as doble, beaver.

Wed Apr 16 20:58:34 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, configure.in, gnubg.c, gtkgame.c, gtkoptions.c, set.c,
	sound.c, sound.h:  Change sound system from esound to gstreamer. Fix
	minor problems in PrompForExit and CommandSetClockwise.

Sun Apr 13 23:08:43 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* file.c: relax recognition of JF Pos files.

Sun Apr 13 22:38:55 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* sound.c, matchequity.c: deal more gracefully with people relocating
	their program paths.

Thu Apr 10 21:33:59 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, Makefile.am: cleanup and remove x86 host test
	* multithread.c: only align stack when USE_SSE_VECTORIZE

Wed Apr  9 21:21:58 UTC 2008 mdpetch <mpetch@capp-sysware.com> 
	* gnubg.c, sound.c: Changed to Apple Quicktime for sound under OS/X rather than ESD
	  This change may be revisted if it is decided to use another sound subsystem	
	* multithread.c, configure.in: modified to support multithreaded version on non Intel system (Apple PPC etc) 

Sun Apr  6 22:33:51 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* lib/neuralnet.c: fix minor apple compile problem.
