@@ -1,3 +1,9 @@
+Fri Apr 25 00:04:58 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* backgammon.h ,gnubg.c ,gtkboard.c ,gtkboard.h ,gtkgame.c ,matchid.c
+	,matchid.h ,positionid.c ,positionid.h ,set.c: merge position and
+	match ids
+
 Mon Apr 21 11:05:10 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gnubg.c, sound.c: minor gstreamer issues when compiling without
